[gd_scene load_steps=21 format=4 uid="uid://cabdetaxmbs55"]

[ext_resource type="Script" path="res://level_3.gd" id="1_s12h3"]
[ext_resource type="PackedScene" uid="uid://c0ysep3u4s68n" path="res://player.tscn" id="1_t81ta"]
[ext_resource type="Script" path="res://playerLevel.gd" id="2_w4p0y"]
[ext_resource type="Script" path="res://hand_anchor.gd" id="3_uohai"]
[ext_resource type="PackedScene" uid="uid://cjxjahh6ldes3" path="res://fire2.tscn" id="4_5teal"]
[ext_resource type="Script" path="res://ice_collision.gd" id="5_se30x"]
[ext_resource type="PackedScene" uid="uid://b6iej7c8wrvv5" path="res://ice.tscn" id="6_wnw23"]
[ext_resource type="Texture2D" uid="uid://dst1pkok8cvuh" path="res://assets/world_tileset.png" id="7_cwqpy"]
[ext_resource type="Script" path="res://tile_map_layer.gd" id="8_elk0i"]
[ext_resource type="PackedScene" uid="uid://deaeu1xrfqc74" path="res://water_block.tscn" id="9_nb51f"]
[ext_resource type="Script" path="res://input_manager.gd" id="10_07xs5"]
[ext_resource type="Script" path="res://controller_manager.gd" id="11_6v552"]
[ext_resource type="PackedScene" uid="uid://1jwgvmrydgvi" path="res://ice_block.tscn" id="12_3n65g"]
[ext_resource type="Script" path="res://dragon_0114level.gd" id="13_ktbm5"]
[ext_resource type="Texture2D" uid="uid://b4b3dmja3nqjh" path="res://assets/0114.png" id="13_rcw45"]
[ext_resource type="PackedScene" uid="uid://ci3fiv2dprgfi" path="res://music_level.tscn" id="16_uu7he"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sqvoa"]
size = Vector2(60.8532, 164.775)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rxaw1"]
texture = ExtResource("7_cwqpy")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0.1875, -8, 0.375)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.5, 8, -6.3125, 8, 1.4375, -8, 1.4375)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_xfbp8"]
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_rxaw1")

[sub_resource type="CircleShape2D" id="CircleShape2D_oofcu"]
radius = 59.439

[node name="Node2D" type="Node2D"]
script = ExtResource("1_s12h3")

[node name="player" parent="." groups=["player"] instance=ExtResource("1_t81ta")]
z_index = 1
y_sort_enabled = true
position = Vector2(49, 379)
rotation = -0.00395171
script = ExtResource("2_w4p0y")

[node name="HandAnchor" type="Node2D" parent="player"]
position = Vector2(0, -4)
script = ExtResource("3_uohai")

[node name="fire" type="Node2D" parent="player/HandAnchor" groups=["fire"]]
visible = false

[node name="fire_breath" parent="player/HandAnchor/fire" groups=["fire"] instance=ExtResource("4_5teal")]
rotation = -0.0142887

[node name="fireCollision" type="Area2D" parent="player/HandAnchor/fire/fire_breath" groups=["fire"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("5_se30x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/HandAnchor/fire/fire_breath/fireCollision" groups=["fire"]]
position = Vector2(93.2797, 0.493878)
rotation = 1.5708
shape = SubResource("RectangleShape2D_sqvoa")

[node name="RayCast2D" type="RayCast2D" parent="player/HandAnchor/fire/fire_breath/fireCollision"]
visible = false
position = Vector2(0, 4)
rotation = 0.00395171
enabled = false
target_position = Vector2(241, 0)
collision_mask = 32767
hit_from_inside = true
collide_with_areas = true

[node name="ice" type="Node2D" parent="player/HandAnchor" groups=["ice"]]
visible = false

[node name="ice" parent="player/HandAnchor/ice" groups=["ice"] instance=ExtResource("6_wnw23")]

[node name="iceCollision" type="Area2D" parent="player/HandAnchor/ice/ice" groups=["ice"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("5_se30x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/HandAnchor/ice/ice/iceCollision" groups=["ice"]]
position = Vector2(91.6231, 0.367535)
rotation = 1.5708
shape = SubResource("RectangleShape2D_sqvoa")

[node name="RayCast2D" type="RayCast2D" parent="player/HandAnchor/ice/ice/iceCollision"]
visible = false
position = Vector2(0, 4)
rotation = 0.00395171
enabled = false
target_position = Vector2(241, 0)
collision_mask = 32767
hit_from_inside = true
collide_with_areas = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAAABQAAQAAAAEAAAABABQAAQAAAAEAAAACABQAAQAAAAEAAAADABQAAQAAAAEAAAAEABQAAQAAAAEAAAAFABQAAQAAAAEAAAAGABQAAQAAAAEAAAAHABQAAQAAAAEAAAAIABQAAQAAAAEAAAAJABQAAQAAAAEAAAAKABQAAQAAAAEAAAALABQAAQAAAAEAAAAMABQAAQAAAAEAAAANABQAAQAAAAEAAAAOABQAAQAAAAEAAAAPABQAAQAAAAEAAAAQABQAAQAAAAEAAAARABQAAQAAAAEAAAASABQAAQAAAAEAAAATABQAAQAAAAEAAAAUABQAAQAAAAEAAAAVABQAAQAAAAEAAAAWABQAAQAAAAEAAAAXABQAAQAAAAEAAAAYABQAAQAAAAEAAAAZABQAAQAAAAEAAAAaABQAAQAAAAEAAAAbABQAAQAAAAEAAAAcABQAAQAAAAEAAAAdABQAAQAAAAEAAAAeABQAAQAAAAEAAAAfABQAAQAAAAEAAAAgABQAAQAAAAEAAAAhABQAAQAAAAEAAAAiABQAAQAAAAEAAAAjABQAAQAAAAEAAAAkABQAAQAAAAEAAAAkABMAAQAAAAEAAAAkABIAAQAAAAEAAAAkABEAAQAAAAEAAAAkABAAAQAAAAEAAAAkAA8AAQAAAAEAAAAkAA4AAQAAAAEAAAAkAA0AAQAAAAEAAAAkAAwAAQAAAAEAAAAkAAoAAQAAAAEAAAAkAAkAAQAAAAEAAAAkAAgAAQAAAAEAAAAkAAcAAQAAAAEAAAAkAAYAAQAAAAEAAAAkAAUAAQAAAAEAAAAkAAQAAQAAAAEAAAAkAAMAAQAAAAEAAAAkAAIAAQAAAAEAAAAkAAEAAQAAAAEAAAAkAAAAAQAAAAEAAAAkAP//AQAAAAEAAAAjAP//AQAAAAEAAAAiAP//AQAAAAEAAAAhAP//AQAAAAEAAAAgAP//AQAAAAEAAAAfAP//AQAAAAEAAAAeAP//AQAAAAEAAAAdAP//AQAAAAEAAAAcAP//AQAAAAEAAAAbAP//AQAAAAEAAAAaAP//AQAAAAEAAAAZAP//AQAAAAEAAAAYAP//AQAAAAEAAAAXAP//AQAAAAEAAAAWAP//AQAAAAEAAAAVAP//AQAAAAEAAAAUAP//AQAAAAEAAAATAP//AQAAAAEAAAASAP//AQAAAAEAAAARAP//AQAAAAEAAAAQAP//AQAAAAEAAAAPAP//AQAAAAEAAAAOAP//AQAAAAEAAAANAP//AQAAAAEAAAAMAP//AQAAAAEAAAALAP//AQAAAAEAAAAKAP//AQAAAAEAAAAJAP//AQAAAAEAAAAIAP//AQAAAAEAAAAHAP//AQAAAAEAAAAGAP//AQAAAAEAAAAFAP//AQAAAAEAAAAEAP//AQAAAAEAAAADAP//AQAAAAEAAAACAP//AQAAAAEAAAABAP//AQAAAAEAAAAAAP//AQAAAAEAAAD/////AQAAAAEAAAD//wAAAQAAAAEAAAD//wEAAQAAAAEAAAD//wIAAQAAAAEAAAD//wMAAQAAAAEAAAD//wQAAQAAAAEAAAD//wUAAQAAAAEAAAD//wYAAQAAAAEAAAD//wcAAQAAAAEAAAD//wgAAQAAAAEAAAD//wkAAQAAAAEAAAD//woAAQAAAAEAAAD//wsAAQAAAAEAAAD//wwAAQAAAAEAAAD//w0AAQAAAAEAAAD//w4AAQAAAAEAAAD//w8AAQAAAAEAAAD//xAAAQAAAAEAAAD//xEAAQAAAAEAAAD//xIAAQAAAAEAAAD//xMAAQAAAAEAAAD//xQAAQAAAAEAAAAAABMAAQAAAAAAAAABABMAAQAAAAAAAAACABMAAQAAAAAAAAADABMAAQAAAAAAAAAEABMAAQAAAAAAAAAFABMAAQAAAAAAAAAGABMAAQAAAAAAAAAHABMAAQAAAAAAAAAIABMAAQAAAAAAAAAJABMAAQAAAAAAAAAKABMAAQAAAAAAAAALABMAAQAAAAAAAAAMABMAAQAAAAAAAAANABMAAQAAAAAAAAAOABMAAQAAAAAAAAAPABMAAQAAAAAAAAAQABMAAQAAAAAAAAARABMAAQAAAAAAAAASABMAAQAAAAAAAAATABMAAQAAAAAAAAAUABMAAQAAAAAAAAAVABMAAQAAAAAAAAAWABMAAQAAAAAAAAAXABMAAQAAAAAAAAAYABMAAQAAAAAAAAAZABMAAQAAAAAAAAAaABMAAQAAAAAAAAAbABMAAQAAAAAAAAAcABMAAQAAAAAAAAAdABMAAQAAAAAAAAAeABMAAQAAAAAAAAAfABMAAQAAAAAAAAAgABMAAQAAAAAAAAAhABMAAQAAAAAAAAAiABMAAQAAAAAAAAAjABMAAQAAAAAAAAAAAA0AAQAAAAEAAAABAA0AAQAAAAEAAAACAA0AAQAAAAEAAAADAA0AAQAJAAAAAAAEAA0AAQAKAAAAAAAFAA0AAQAKAAAAAAAGAA0AAQAKAAAAAAAHAA0AAQAKAAAAAAAIAA0AAQAKAAAAAAAJAA0AAQAAAAEAAAAKAA0AAQAAAAEAAAALAA0AAQAAAAEAAAANAA0AAQAAAAEAAAAMAA0AAQAAAAEAAAAOAA0AAQAAAAEAAAAPAA0AAQAAAAEAAAAAAAkAAQAAAAEAAAABAAkAAQAAAAEAAAACAAkAAQAAAAEAAAADAAkAAQAAAAEAAAAEAAkAAQAAAAEAAAAFAAkAAQAAAAEAAAAGAAkAAQAAAAEAAAAHAAkAAQAAAAEAAAAIAAkAAQAAAAEAAAAJAAkAAQAAAAEAAAAKAAkAAQAAAAEAAAAkAAsAAQAAAAEAAAAfABAAAQAAAAEAAAAhAA8AAQAAAAEAAAAhAA4AAQAAAAEAAAAhAA0AAQAAAAEAAAAhAAwAAQAAAAEAAAAhAAsAAQAAAAEAAAAhAAoAAQAAAAEAAAAhAAkAAQAAAAEAAAAhAAgAAQAAAAEAAAAhAAcAAQAAAAEAAAAhAAYAAQAAAAEAAAAhAAUAAQAAAAEAAAAhAAQAAQAAAAEAAAAPAA4AAQAAAAEAAAAPAA8AAQAAAAEAAAAPABAAAQAAAAEAAAAQABAAAQAAAAEAAAARABAAAQAAAAEAAAASABAAAQAAAAEAAAATABAAAQAAAAEAAAAUABAAAQAAAAEAAAAeABAAAQAAAAEAAAAdABAAAQAAAAEAAAAcABAAAQAAAAEAAAAbABAAAQAAAAEAAAAaABAAAQAAAAEAAAAZABAAAQAAAAEAAAAYABAAAQAAAAEAAAAXABAAAQAAAAEAAAAWABAAAQAAAAEAAAAVABAAAQAAAAEAAAAgABAAAQAAAAEAAAAhABAAAQAAAAEAAAAMAAgAAQAAAAEAAAALAAgAAQAAAAEAAAAKAAgAAQAAAAEAAAAJAAgAAQAAAAEAAAAIAAgAAQAAAAEAAAAHAAgAAQAAAAEAAAAGAAgAAQAAAAEAAAAFAAgAAQAAAAEAAAAEAAgAAQAAAAEAAAADAAgAAQAAAAEAAAAMAAAAAQAAAAEAAAAMAAEAAQAAAAEAAAALAAEAAQAAAAEAAAALAAIAAQAAAAEAAAALAAMAAQAAAAEAAAALAAQAAQAAAAEAAAALAAUAAQAAAAEAAAAMAAIAAQAAAAEAAAAMAAMAAQAAAAEAAAAMAAQAAQAAAAEAAAALAAYAAQAAAAEAAAAMAAUAAQAAAAEAAAALAAcAAQAAAAEAAAAMAAYAAQAAAAEAAAAMAAcAAQAAAAEAAAAgAAIAAQAAAAEAAAAfAAIAAQAAAAEAAAAeAAIAAQAAAAEAAAAdAAIAAQAAAAEAAAAcAAIAAQAAAAEAAAAbAAIAAQAAAAEAAAACAAgAAQAAAAEAAAABAAgAAQAAAAEAAAAAAAgAAQAAAAEAAAAAAAcAAQAAAAEAAAAAAAYAAQAAAAEAAAAAAAUAAQAAAAEAAAAAAAQAAQAAAAEAAAAAAAMAAQAAAAEAAAAAAAIAAQAAAAEAAAAAAAEAAQAAAAEAAAAAAAAAAQAAAAEAAAABAAAAAQAAAAEAAAACAAAAAQAAAAEAAAADAAAAAQAAAAEAAAAEAAAAAQAAAAEAAAAFAAAAAQAAAAEAAAAGAAAAAQAAAAEAAAAHAAAAAQAAAAEAAAAIAAAAAQAAAAEAAAAJAAAAAQAAAAEAAAAKAAAAAQAAAAEAAAALAAAAAQAAAAEAAAAKAAIAAQAAAAEAAAAKAAMAAQAAAAEAAAAKAAQAAQAAAAEAAAAKAAUAAQAAAAEAAAAKAAYAAQAAAAEAAAAJAAYAAQAAAAEAAAAJAAcAAQAAAAEAAAAKAAcAAQAAAAEAAAAIAAcAAQAAAAEAAAAGAAcAAQAAAAEAAAAFAAcAAQAAAAEAAAAEAAcAAQAAAAEAAAADAAcAAQAAAAEAAAACAAcAAQAAAAEAAAABAAcAAQAAAAEAAAAHAAcAAQAAAAEAAAAHAAYAAQAAAAEAAAAGAAYAAQAAAAEAAAAFAAYAAQAAAAEAAAAEAAYAAQAAAAEAAAADAAYAAQAAAAEAAAACAAYAAQAAAAEAAAABAAYAAQAAAAEAAAAIAAYAAQAAAAEAAAAJAAUAAQAAAAEAAAAIAAUAAQAAAAEAAAAHAAUAAQAAAAEAAAAGAAUAAQAAAAEAAAAFAAUAAQAAAAEAAAAEAAUAAQAAAAEAAAADAAUAAQAAAAEAAAACAAUAAQAAAAEAAAABAAUAAQAAAAEAAAACAAQAAQAAAAEAAAADAAQAAQAAAAEAAAAEAAQAAQAAAAEAAAAFAAQAAQAAAAEAAAAGAAQAAQAAAAEAAAAHAAQAAQAAAAEAAAAIAAQAAQAAAAEAAAAJAAQAAQAAAAEAAAABAAQAAQAAAAEAAAACAAMAAQAAAAEAAAADAAMAAQAAAAEAAAAEAAMAAQAAAAEAAAAFAAMAAQAAAAEAAAAGAAMAAQAAAAEAAAAHAAMAAQAAAAEAAAAIAAMAAQAAAAEAAAAJAAMAAQAAAAEAAAABAAMAAQAAAAEAAAABAAIAAQAAAAEAAAACAAIAAQAAAAEAAAADAAIAAQAAAAEAAAAEAAIAAQAAAAEAAAAFAAIAAQAAAAEAAAAGAAIAAQAAAAEAAAAHAAIAAQAAAAEAAAAIAAIAAQAAAAEAAAAJAAIAAQAAAAEAAAAJAAEAAQAAAAEAAAAKAAEAAQAAAAEAAAAIAAEAAQAAAAEAAAAHAAEAAQAAAAEAAAAGAAEAAQAAAAEAAAAFAAEAAQAAAAEAAAAEAAEAAQAAAAEAAAADAAEAAQAAAAEAAAACAAEAAQAAAAEAAAABAAEAAQAAAAEAAAAQAA8AAQAAAAEAAAARAA8AAQAAAAEAAAASAA8AAQAAAAEAAAATAA8AAQAAAAEAAAAUAA8AAQAAAAEAAAA=")
tile_set = SubResource("TileSet_xfbp8")
script = ExtResource("8_elk0i")

[node name="InputManager" type="Node" parent="."]
script = ExtResource("10_07xs5")

[node name="ControllerManager" type="Node" parent="InputManager"]
script = ExtResource("11_6v552")

[node name="iceBlock" parent="." instance=ExtResource("12_3n65g")]
position = Vector2(336, 400)

[node name="iceBlock2" parent="." instance=ExtResource("12_3n65g")]
position = Vector2(336, 304)

[node name="iceBlock3" parent="." instance=ExtResource("12_3n65g")]
position = Vector2(336, 368)

[node name="iceBlock4" parent="." instance=ExtResource("12_3n65g")]
position = Vector2(336, 336)

[node name="dragon0114" type="Area2D" parent="."]
position = Vector2(88, 560)
script = ExtResource("13_ktbm5")

[node name="Sprite2D" type="Sprite2D" parent="dragon0114"]
texture = ExtResource("13_rcw45")

[node name="CollisionShape2D" type="CollisionShape2D" parent="dragon0114"]
shape = SubResource("CircleShape2D_oofcu")

[node name="waterBlock" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(624, 400)

[node name="waterBlock13" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(753, 272)

[node name="waterBlock14" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(721, 272)

[node name="waterBlock15" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(689, 272)

[node name="waterBlock16" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(657, 272)

[node name="waterBlock17" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(625, 272)

[node name="waterBlock18" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(593, 272)

[node name="waterBlock19" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(561, 272)

[node name="waterBlock20" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(529, 272)

[node name="waterBlock21" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(497, 272)

[node name="waterBlock22" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(465, 272)

[node name="waterBlock23" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(560, 192)

[node name="waterBlock30" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(688, 112)

[node name="waterBlock31" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(720, 112)

[node name="waterBlock32" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(752, 112)

[node name="waterBlock33" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(784, 112)

[node name="waterBlock24" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(592, 192)

[node name="waterBlock25" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(624, 192)

[node name="waterBlock26" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(656, 192)

[node name="waterBlock27" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(688, 192)

[node name="waterBlock2" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(656, 400)

[node name="waterBlock3" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(688, 400)

[node name="waterBlock4" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(720, 400)

[node name="waterBlock5" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(752, 400)

[node name="waterBlock6" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(784, 400)

[node name="waterBlock7" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(848, 320)

[node name="waterBlock8" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(880, 320)

[node name="waterBlock9" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(912, 320)

[node name="waterBlock10" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(944, 320)

[node name="waterBlock11" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(976, 320)

[node name="waterBlock12" parent="." instance=ExtResource("9_nb51f")]
position = Vector2(1008, 320)

[node name="iceBlock5" parent="." instance=ExtResource("12_3n65g")]
position = Vector2(880, 48)

[node name="iceBlock6" parent="." instance=ExtResource("12_3n65g")]
position = Vector2(880, 16)

[node name="iceBlock7" parent="." instance=ExtResource("12_3n65g")]
position = Vector2(912, 16)

[node name="iceBlock8" parent="." instance=ExtResource("12_3n65g")]
position = Vector2(912, 48)

[node name="iceBlock9" parent="." instance=ExtResource("12_3n65g")]
position = Vector2(944, 48)

[node name="iceBlock10" parent="." instance=ExtResource("12_3n65g")]
position = Vector2(944, 16)

[node name="iceBlock11" parent="." instance=ExtResource("12_3n65g")]
position = Vector2(1072, 112)

[node name="iceBlock12" parent="." instance=ExtResource("12_3n65g")]
position = Vector2(1072, 80)

[node name="iceBlock13" parent="." instance=ExtResource("12_3n65g")]
position = Vector2(1072, 48)

[node name="iceBlock14" parent="." instance=ExtResource("12_3n65g")]
position = Vector2(1072, 16)

[node name="musicLevel" parent="." instance=ExtResource("16_uu7he")]
autoplay = false

[connection signal="body_entered" from="dragon0114" to="dragon0114" method="_on_body_entered"]
